	`chise_ds_open_decoding_table', `chise_dt_get_char' and
	`chise_dt_close'.

	* chartab.c (char_table_get_db): Use
	`chise_char_load_feature_value' instead of `chise_ft_get_value'.
	(load_char_attribute_table_map_func): Modify for
	`chise_char_feature_value_iterate'.
	(Fload_char_attribute_table): Use
	`chise_char_feature_value_iterate' instead of `chise_ft_iterate'.

2003-08-19  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* chartab.c (put_char_table): Modify for inherited coded-charsets
	in XEmacs CHISE.

2003-08-19  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* chartab.c (Fput_char_table_map_function): Fixed.
	(word_boundary_p): Don't check charset in XEmacs CHISE.

2003-08-17  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule-charset.c (Fsave_charset_mapping_table): Use
	`open_chise_data_source_maybe'; use `chise_ds_open_decoding_table'
	instead of `chise_open_decoding_table'; refer
	`default_chise_data_source'; use `chise_dt_close' instead of
	`chise_close_decoding_table'.
	(load_char_decoding_entry_maybe): Likewise.

	* chartab.c (default_chise_data_source): New variable when `CHISE'
	is defined.
	(Fcopy_char_table): `ct->ds' is deleted.
	(open_chise_data_source_maybe): New function.
	(Fclose_char_data_source): New function.
	(char_table_open_db_maybe): Use `open_chise_data_source_maybe';
	use `chise_ds_open_feature_table' instead of
	`chise_open_feature_table'.
	(char_table_close_db_maybe): Use `chise_ft_close' instead of
	`chise_close_feature_table'; `cit->ds' is deleted.
	(syms_of_chartab): Add new builtin function
	`close-char-data-source' when `HAVE_CHISE_CLIENT' is defined.

	* chartab.h (default_chise_data_source): New extern variable.
	(open_chise_data_source_maybe): New prototype.
	(struct Lisp_Char_Table): Delete `ds'.

2003-08-11  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule-charset.c (Fsave_charset_mapping_table): Use libchise when
	`CHISE' is defined.

2003-08-10  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>
